--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "moment": "^2.29.4",
